Update TestG1GCByLRUCache.java